# Clock

./: .gitignore  CMakeLists.txt  README.md  Whitelist.txt  build.ps1
src/: AppCore.cpp  FocusClockApp.h  FocusTimerCore.cpp  Hook.cpp  KeyboardHook.cpp  Layout.cpp  Panel.cpp  Rendering.cpp  Rerun.cpp  Schedule.cpp  ScheduleManager.cpp  Settings.cpp  SettingsManager.cpp  UIManager.cpp  Update.cpp  Utilities.cpp  Whitelist.cpp  WhitelistManager.cpp  WindowManager.cpp  main.cpp  utils.cpp
src/Res/: FocusClock.aps  FocusClock.rc
